@@ -1,3 +1,13 @@
+bobcat (4.06.00)
+
+  * The support classes Mul, Div, Mod, ..., Xor, used by BinopsBase declared a
+    Binops parameter, which was nowhere used. This parameter has been removed
+    from BinopsBase's support classes.
+
+  * All html man-pages were rebuilt by Yodl 3.08.02 (fixing cosmetic errors).
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 29 Jan 2017 14:43:28 +0100
+
 bobcat (4.05.00)
 
   * Added classes Exec, CinInserter, CerrExtractor, CoutExtractor, and
